[package]
name = "scream"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.3" }
cortex-m-rt = "0.7.0"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
lsm303agr = "0.2.2"
nb = "1.0.0"
microbit-v2 = "0.13.0"
embedded-hal = "0.2.4"